TOWER-54-bug-(project roles): horizontal scroll project roles
 - display project roles in carousel
 - fix pagination bug in carousel scroll button

[Fixes TOWER-54]

--- a/src/components/Reports/reports.scss
+++ b/src/components/Reports/reports.scss
@@ -238,6 +238,9 @@ td {
   color: rgba(51, 62, 68, 0.51);
 }
 
+.card-reports {
+  width: 100%;
+}
 /*
   Cards css
  */
@@ -248,6 +251,7 @@ td {
 .card-tile {
   margin-bottom: 45px;
   text-align: center;
+  min-width: 14.8rem;
 }
 .card-tile-heading {
   border: 1px solid #f2f2f2;
@@ -259,9 +263,11 @@ td {
   transition: all 0.3s ease-in-out 0s;
   width: 60px;
   background-color: #ffffff;
-}
-.card-tile-heading {
   line-height: 50px;
+}
+
+.card-tile-heading__img {
+  display: inline !important;
 }
 .card-tile-content {
   padding-top: 50px;
